hphp/test/slow/readonly_tdb/scope_if_4.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'ROTDB\ScopeIf4\ro() returns readonly, but the caller expects a mutable value' in %s.php:23
Stack trace:
#0 {main}
